2 December 2015: Wouter
	- configure --enable-ratelimit-default-is-off with --enable-ratelimit
	  to set the default ratelimit to disabled but available in nsd.conf.
	- Document that ratelimit qps and slip are updated in reconfig.

1 December 2015: Wouter
	- Explain rrl-slip better in documentation.

30 November 2015: Wouter
	- Fix TCP responses when REUSEPORT is in use by turning it off.
	- reuseport: no is the default, because the feature is not troublefree.
	- Document default in manpage for rrl-slip, ip4 and 6 prefixlength.

24 November 2015: Wouter
	- Fix zonec ttl mismatch printout to include more information.

18 November 2015: Wouter
	- RELNOTES more descriptive.
	- newer acx_nlnetlabs.m4.
	- spelling fixes from Igor Sobrado Delgado.

17 November 2015: Wouter
	- Fix #721: Fix wrong error code (FORMERR) returned for unknown
	  opcode.  NOTIMP expected.

16 November 2015: Wouter
	- Allocate less memory for TSIG digest.

6 November 2015: Wouter
	- Fixup for newer acx_nlnetlabs.m4, test for openssl version after
	  testing for libdl need.

5 November 2015: Wouter
	- newer acx_nlnetlabs.m4, does not needlessly link with -ldl.

30 October 2015: Wouter
	- Fix tpkg tests for portability.

29 October 2015: Wouter
	- patch from Doug Hogan for SSL_OP_NO_SSLvx options.
	- updated contrib/nsd.spec, from Bálint Szigeti.
	- support configure --with-dbfile="" for nodb mode by default, where
	  there is no binary database, but nsd reads and writes zonefiles.

27 October 2015: Wouter
	- portability fixes.

26 October 2015: Wouter
	- Init pfd for handlers added during handler-event-walk.

23 October 2015: Wouter
	- Fix many interfaces and zones updates from nsd parent event loop.

22 October 2015: Wouter
	- 4.1.6 release tag.
	- trunk contain 4.1.7 in development.

20 October 2015: Wouter
	- 4.1.6rc2 tag created.

19 October 2015: Wouter
	- Fix compile of zonec error message on FreeBSD.

15 October 2015: Wouter
	- 4.1.6rc1 tag created.

13 October 2015: Wouter