@@ -2,6 +2,7 @@
 	- configure --enable-ratelimit-default-is-off with --enable-ratelimit
 	  to set the default ratelimit to disabled but available in nsd.conf.
 	- Document that ratelimit qps and slip are updated in reconfig.
+	- version: "string" option to set chaos version query reply string.
 
 1 December 2015: Wouter
 	- Explain rrl-slip better in documentation.
